--- a/C-Frontend/src/components/cart/styles.css
+++ b/C-Frontend/src/components/cart/styles.css
@@ -12,17 +12,17 @@
 }
 
 .back-btn {
-  background: #113f67;
+  background: #000000;
   color: white;
   border: none;
   border-radius: 8px;
   padding: 8px 14px;
-  font-weight: 600;
+  font-weight: 400;
   cursor: pointer;
 }
 
 .cart-title {
-  color: white;
+  color: #000;
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -44,7 +44,7 @@
 
 .cart-table th {
   background: #f1f5f9;
-  color: #113f67;
+  color: #000;
   padding: 8px;
 }
 
@@ -77,11 +77,11 @@
   cursor: pointer;
 }
 
-.qty-btn.minus { background: #9d0909; }
+.qty-btn.minus { background: #ea1e25; }
 .qty-btn.plus { background: green; }
 
 .remove-btn {
-  background: #9d0909;
+  background: #ea1e25;
   color: white;
   border: none;
   border-radius: 6px;
@@ -103,18 +103,18 @@
 
 .item-total {
   font-weight: 600;
-  color: #113f67;
+  color: #000;
 }
 
 .grand-total {
-  color: white;
+  color: #000;
   margin-top: 24px;
 }
 
 .checkout-btn {
   margin-top: 15px;
   padding: 10px 20px;
-  background: #4ba5f3;
+  background: #ea1e25;
   color: white;
   border: none;
   border-radius: 6px;
