--- a/C-Frontend/src/index.css
+++ b/C-Frontend/src/index.css
@@ -1,16 +1,8 @@
-html, body, #root {
-  height: 100%;
+body {
   margin: 0;
-
-  background-image: url("/bg.jpg");
-  background-repeat: repeat;
-  background-size: auto;
-  background-attachment: fixed;
-
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
