--- a/C-Frontend/src/components/recommendations/styles.css
+++ b/C-Frontend/src/components/recommendations/styles.css
@@ -96,7 +96,7 @@
   max-width: 860px;
   margin: 40px auto 0;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .go-cart-btn {
@@ -111,6 +111,23 @@
 }
 
 .go-cart-btn:hover {
+  background: #202020;
+}
+
+.best-sellers-link {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px 18px;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.best-sellers-link:hover {
+  text-decoration: underline;
   background: #202020;
 }
 
@@ -154,8 +171,21 @@
     max-width: 860px;
     margin: 40px auto 0;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin-left: 5%;
+    gap: 10px;
+  }
+
+  .best-sellers-link {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px 18px;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  margin-right: 20px;
   }
 
 }
